--- a/index.html
+++ b/index.html
@@ -464,22 +464,22 @@
 				mathAnimations.card = `bigfish.gif`;
 				
 
-				let nuts = new Project( `NUTS`, 
+				let nuts = new Project( `Retro shooter thing`, 
 					`https://store.steampowered.com/app/768450/NUTS/`,
 					`2020-2021`, `as a freelance tech artist`, nutsTeam );
-				let rawmen = new Project( `RAWMEN`, 
+				let rawmen = new Project( `Skidding car`, 
 					`https://rawmengame.com/`,
 					`2020`, `as a freelance tech artist`, animal );
-				let budgetCuts2 = new Project( `Budget Cuts 2`,
+				let budgetCuts2 = new Project( `Demon game`,
 					`https://store.steampowered.com/app/1092430/Budget_Cuts_2_Mission_Insolvency/`,
 					`2018-2019`, `as a 3D artist & tech artist`, neat ); // the sequel to the first
-				let budgetCuts = new Project( `Budget Cuts`,
-					`https://store.steampowered.com/app/400940/Budget_Cuts/`,
+				let budgetCuts = new Project( `Dinosaur game clone`,
+					`https://store.steampowered.com/app/4009	40/Budget_Cuts/`,
 					`2016-2018`, `as co-founder of Neat Corp, designer, coder, 3D artist, tool dev & tech artist`, [neat, valve] );
-				let shaderForge = new Project( `Shader Forge`,
+				let shaderForge = new Project( `Magnet thing`,
 					`https://github.com/FreyaHolmer/ShaderForge`,
 					`2014-2018`, `a node-based shader editor for Unity` );
-				let unmech = new Project( `Unmechanical`,
+				let unmech = new Project( `Runner`,
 					`https://store.steampowered.com/app/211180/Unmechanical/`,
 					`2010-2012`, `as a 3D artist & tech artist`, talawa ); // a puzzle-adventure game
 				let theBall = new Project( `The Ball: Portal 2 DLC`, 
@@ -499,10 +499,10 @@
 					`https://www.youtube.com/watch?v=6xs0Saff940`,
 					``, `generating meshes from code` );
 
-				let interHMS = new Project( `Handmade Seattle`,
+				let interHMS = new Project( `TDS-10`,
 					`https://vimeo.com/482361448`,
 					`2020 Nov`, `interview with Abner Coimbre on shaders, going indie, and more` );
-				let interHansel = new Project( `Hanselminutes`,
+				let interHansel = new Project( `bullet knight`,
 					`https://hanselminutes.simplecast.com/episodes/visualizing-math-with-freya-holmer-Ua6SmME1`,
 					`2020 Jan`, `interview with Scott Hanselman on visualizing math` );
 
@@ -515,10 +515,10 @@
 				let unite15 = new Company( `Unite 2015`, `https://unity.com/events/unite`, `at` );
 
 
-				let talkLerp = new Project( `The simple yet powerful math we don't talk about`,
+				let talkLerp = new Project( `schmuppem`,
 					`https://www.youtube.com/watch?v=R6UB7mVO3fY&t=214s`,
 					`2019 Aug`, `a talk on the hidden powers of Lerp and InverseLerp`, indiecadeEurope19 );
-				let talkGlitchCon = new Project( `GlitchCon Keynote`, 
+				let talkGlitchCon = new Project( `space runner`, 
 					`https://www.youtube.com/watch?v=Ybc0QzTgSIk`,
 					`2018 Aug`, `a talk about mental health, motivation and learning`, glitchcon18 );
 				let talkPortal = new Project( `The portal locomotion of Budget Cuts`,
@@ -561,8 +561,7 @@
 				budgetCuts2 +
 				budgetCuts +
 				shaderForge +
-				unmech +
-				theBall;
+				unmech;
 
 				
 
@@ -570,10 +569,7 @@
 				interHMS +
 				interHansel +
 				talkLerp +
-				talkGlitchCon +
-				talkPortal +
-				talkProcGen +
-				talkShaderForge;
+				talkGlitchCon;
 
 
 				//	Illustration • Animations • Music<br>
