--- a/dinocatch/dinocatch.html
+++ b/dinocatch/dinocatch.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Three Evenly Spaced Images</title>
+  <title>Info page</title>
   <style>
     body {
       display: flex;
