--- a/index.html
+++ b/index.html
@@ -122,6 +122,15 @@
 				font-size: 75%;
 				font-family: monospace;
 			}
+			.talents{
+				margin-top: 1em;
+				font-family: monospace;
+			}
+			.talents-sub{
+				margin-top: 0.4em;
+				font-size: 75%;
+				font-family: monospace;
+			}
 			h3{
 				margin-top: 1.3em;
 				margin-bottom: 0.4em;
@@ -405,7 +414,8 @@
 				
 				document.getElementById("social_icons").innerHTML =
 				socialIcon( 'GitHub', 'https://github.com/selimcan-cakandemir', `my github, but i don't use it as much`) +
-				socialIcon( 'Linkedin', 'https://www.linkedin.com/in/selimcan-0207761/', `my linkedin`);
+				socialIcon( 'Linkedin', 'https://www.linkedin.com/in/selimcan-0207761/', `my linkedin`) +
+				socialIcon( 'cvlogo', './cvfile/cv.html', `my cv`);
 				
 
 				// companies
@@ -587,6 +597,9 @@
 					<div class="main_card">
 						<div class="social_icons" id="social_icons"></div>
 						<div class="email">sccdemir@gmail.com</div>
+						<div class="talents">Unity - Gameplay Programmer</div>
+						<div class="talents">Languages - C# - JavaScript - HLSL</div>
+						<div class="talents">Tools - Photoshop - Blender</div>
 					</div>
 
 
